syntax = "proto3";

option csharp_namespace = "UserManagementService";

service GrpcUserManagement{
  rpc GetAllUserProfiles(stream GrpcUserProfileRequest) returns (stream GrpcUserProfileResponse);
}

message GrpcUserProfileRequest{
  int32 userProfileId = 1;
  bool isTransferred = 2;
}

message GrpcUserProfileResponse{
  int32 userProfileId = 1;
  string position = 2;
  string department = 3;
  string fullName = 4;
}
